Fix flexbox alignment in club leaders list

--- a/client/clubs/sole/members/members.styl
+++ b/client/clubs/sole/members/members.styl
@@ -17,7 +17,7 @@ $member-list-width = $grid-breakpoints['sm']
 
 .clubs-sole-members__list-item
   display flex
-  align-items baseline
+  align-items center
 
 .clubs-sole-members__member
   flex 1 1 0%
